# kabardian-translator

./:  USAGE_GUIDE.md  .gitignore  CODE_OF_CONDUCT.md  USAGE_GUIDE.md  app.py  pyproject.toml  readme.md  requirements.txt  requirment.txt  setup.py  translation_service.py  tts_service.py
benchmarks/: .gitignore  BENCHMARK_500.md  Readme.md  bench.py  benchmarks_structure.md  requirements.txt
kabardian_translator/: __init__.py  app.py  cli.py  download_models.py  tokenizer_manager.py  translation_service.py  transliterator.py  tts_service.py
kabardian_translator/templates/: index.html
