[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kabardian-translator"
version = "1.0.0"
description = "Multilingual translator for Kabardian and Caucasian languages with speech synthesis"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "CC-BY-NC-4.0"}
keywords = ["translation", "kabardian", "caucasian-languages", "tts", "nmt", "apple-silicon"]
authors = [
    {name = "Kubataba", email = "info@copperline.info"}
]
maintainers = [
    {name = "Kubataba", email = "info@copperline.info"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: English",
    "Natural Language :: Russian", 
    "Natural Language :: Other",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "flask>=3.0.0",
    "torch>=2.1.0",
    "transformers>=4.37.0,<5.0.0",
    "sentencepiece>=0.1.99",
    "accelerate>=0.24.1",
    "huggingface-hub>=0.20.3,<1.0.0",
    "soundfile>=0.12.1",
    "numpy>=1.24.3",
    "scipy>=1.11.0",
    "torchaudio>=2.1.0",
    "omegaconf>=2.3.0",
]

[project.optional-dependencies]
audio = ["librosa>=0.10.0"]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/kubataba/kabardian-translator"
Documentation = "https://github.com/kubataba/kabardian-translator#readme"
Repository = "https://github.com/kubataba/kabardian-translator"
Issues = "https://github.com/kubataba/kabardian-translator/issues"

[project.scripts]
kabardian-translator = "kabardian_translator.cli:main"

[tool.setuptools]
packages = ["kabardian_translator"]

[tool.setuptools.package-data]
kabardian_translator = ["templates/*.html"]  # templates внутри пакета
